Fixed description overlap

--- a/main.css
+++ b/main.css
@@ -59,7 +59,6 @@ body {
 .description p {
 	color: #fff;
 	font-size: 1.3rem;
-	line-height: .5;
     text-shadow: 2px 2px 4px #202020a5;
     padding-bottom: .5em;
 }
